--- a/src/pages/works.astro
+++ b/src/pages/works.astro
@@ -10,7 +10,7 @@ import Layout from '../layouts/Layout.astro';
 
 // 静的生成
 const rawWorks = (await getCollection('works')).filter(
-  (work) => !work.id.startsWith('template/'),
+  (work) => !work.id.startsWith('template/')
 );
 
 // 画像最適化
@@ -42,8 +42,6 @@ const worksWithThumbnails: Work[] = await Promise.all(
     if (imageMetadata) {
       const img = await getImage({
         src: imageMetadata,
-        format: 'avif',
-        quality: 75,
       });
       optimizedImage = {
         src: img.src,
@@ -58,12 +56,12 @@ const worksWithThumbnails: Work[] = await Promise.all(
       thumbnail: getThumbnailPath(work, filename),
       optimizedImage,
     };
-  }),
+  })
 );
 
 // 作品
 const works = worksWithThumbnails.sort(
-  (a, b) => b.data.createdAt.getTime() - a.data.createdAt.getTime(),
+  (a, b) => b.data.createdAt.getTime() - a.data.createdAt.getTime()
 );
 
 // タグ
