refactor: Tailwind CSSクラス名を短縮記法に更新。

--- a/src/components/index/ContactSection.astro
+++ b/src/components/index/ContactSection.astro
@@ -37,7 +37,7 @@ const contacts = [
           target={contact.name !== 'Email' ? '_blank' : undefined}
           rel={contact.name !== 'Email' ? 'noopener noreferrer' : undefined}
         >
-          <div class="flex-shrink-0">
+          <div class="shrink-0">
             {contact.icon === 'email' && (
               <svg
                 class={iconClass}
