--- a/src/pages/works/[work].astro
+++ b/src/pages/works/[work].astro
@@ -89,7 +89,7 @@ if (work.data.thumbnail) {
           <Content components={{ img: MdxImage }} />
         </div>
 
-        <div class="hidden w-64 flex-shrink-0 lg:block">
+        <div class="hidden w-64 shrink-0 lg:block">
           <Outline headings={tocHeadings} />
         </div>
       </div>
