--- a/src/pages/works.astro
+++ b/src/pages/works.astro
@@ -10,7 +10,7 @@ import Layout from '../layouts/Layout.astro';
 
 // 静的生成
 const rawWorks = (await getCollection('works')).filter(
-  (work) => !work.id.startsWith('template/'),
+  (work) => !work.id.startsWith('template/') && !work.data.isDraft
 );
 
 // 画像最適化
@@ -56,13 +56,17 @@ const worksWithThumbnails: Work[] = await Promise.all(
       thumbnail: getThumbnailPath(work, filename),
       optimizedImage,
     };
-  }),
+  })
 );
 
 // 作品
-const works = worksWithThumbnails.sort(
-  (a, b) => b.data.createdAt.getTime() - a.data.createdAt.getTime(),
-);
+const works = worksWithThumbnails.sort((a, b) => {
+  // ピン留め記事を先に
+  if (a.data.isPinned && !b.data.isPinned) return -1;
+  if (!a.data.isPinned && b.data.isPinned) return 1;
+  // 同じピン状態なら作成日順
+  return b.data.createdAt.getTime() - a.data.createdAt.getTime();
+});
 
 // タグ
 const allTags = [
