--- a/src/pages/works.astro
+++ b/src/pages/works.astro
@@ -5,12 +5,12 @@ import type { Work } from '../types/work';
 import { getThumbnailPath } from '../utils/work';
 
 // コンポーネント
-import WorkList from '../components/works/WorkList.tsx';
+import WorkList from '../components/works/WorkList.svelte';
 import Layout from '../layouts/Layout.astro';
 
 // 静的生成
 const rawWorks = (await getCollection('works')).filter(
-  (work) => !work.id.startsWith('template/') && !work.data.isDraft
+  (work) => !work.id.startsWith('template/') && !work.data.isDraft,
 );
 
 // 画像最適化
@@ -56,7 +56,7 @@ const worksWithThumbnails: Work[] = await Promise.all(
       thumbnail: getThumbnailPath(work, filename),
       optimizedImage,
     };
-  })
+  }),
 );
 
 // 作品
